kubernetes/manifests/07.network/11.pod-host-network.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  hostNetwork: true
  containers:
  - name: nginx
    image: ahmadrafiee/mecan-sample-app:ver1
