kubernetes/manifests/07.network/12.pod-host-port.yml
apiVersion: v1
kind: Pod
metadata:
  name: web
spec:
  containers:
    - name: web
      image: ahmadrafiee/mecan-sample-app:ver1
      ports:
        - containerPort: 80
          hostPort: 8080
