kubernetes/manifests/07.network/01.service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: mecan-service-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 7070
      protocol: TCP
      targetPort: 80
  selector:
    app: mecan-sample-app
