kubernetes/manifests/07.network/02.service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: mecan-service-nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      # nodePort is optional
      nodePort: 31001
  selector:
    app: mecan-sample-app
