kubernetes/manifests/07.network/03.service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: mecan-service-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: mecan-sample-app
