kubernetes/manifests/07.network/06.ingress-simple.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave
  namespace: weave
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: scope.kube.mecan.ir
    http:
      paths:
      - backend:
          service:
            name: weave-scope-app
            port:
                number: 80
        path: /
        pathType: Prefix
