kubernetes/manifests/07.network/08.ingress-web-auth.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: weavescope-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  name: weave
  namespace: weave
spec:
  rules:
  - host: scope.kube.mecan.ir
    http:
      paths:
      - backend:
          service:
            name: weave-scope-app
            port:
                number: 80
        path: /
        pathType: Prefix
